<resources>
    <string name="app_name">AppBenhVienLocal</string>
    <string name="h_nh_nh">Hình ảnh</string>
    <string name="dat_kham">ĐẶT KHÁM</string>
    <string name="phone_number"><b>1900-2115</b></string>
    <string name="ho_so"><b>HỒ SƠ ĐẶT KHÁM</b></string>
    <string name="mo_ta_anh">Hình ảnh</string>
    <string name="ho_tro_dat_kham">Hỗ trợ đặt khám</string>
    <string name="ho_tro_zalo">Hỗ trợ Zalo</string>
    <string name="ban_do">Bản đồ</string>
    <string name="phieu_kham"><b>PHIẾU KHÁM BỆNH</b></string>
    <string name="kiem_tra"><b>Kiểm tra</b></string>
    <string name="notification"><b>THÔNG BÁO</b></string>
    <string name="open_navigation_drawer">Open Navigation</string>
    <string name="close_navigation_drawer">Close Navigation</string>
    <string name="noi_khai_bao"><font color="#0032C7"><b>Nơi khai báo</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="so_dien_thoai"><font color="#0032C7"><b>Số điện thoại</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="ho_va_ten"><font color="#0032C7"><b>Họ và tên</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="ngay_sinh"><font color="#0032C7"><b>Ngày sinh</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="quoc_tich"><font color="#0032C7"><b>Quốc tịch</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="tinh_thanh"><font color="#0032C7"><b>Tỉnh thành</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="quan_huyen"><font color="#0032C7"><b>Quận huyện</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="xa_phuong"><font color="#0032C7"><b>Xã Phường</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="so_nha_ten_duong"><font color="#0032C7"><b>Số nhà, tên đường</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="cau_hoi_bieu_hien"><font color="#0032C7"><b>Ông/ bà hiện có những triệu chứng hay biểu hiện nào sau đây không?</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="sot"><font color="#0032C7"><b>Sốt</b></font> <font color="#FF0000">(*)</font></string>
    <string name="ho"><font color="#0032C7"><b>Ho</b></font> <font color="#FF0000">(*)</font></string>
    <string name="dau_hong"><font color="#0032C7"><b>Đau họng</b></font> <font color="#FF0000">(*)</font></string>
    <string name="mat_vi_mui"><font color="#0032C7"><b>Mất vị/ Mất mùi</b></font> <font color="#FF0000">(*)</font></string>
    <string name="cam_giac_met"><font color="#0032C7"><b>Cảm giác mệt</b></font> <font color="#FF0000">(*)</font></string>
    <string name="kh_tho"><font color="#0032C7"><b>Khó thở</b></font> <font color="#FF0000">(*)</font></string>
    <string name="trieu_chung_khac"><font color="#0032C7"><b>Triệu chứng khác</b></font> <font color="#FF0000">(*)</font></string>
    <string name="trong_th_i_gian_v_a_qua"><font color="#0032C7"><b>Trong thời gian vừa qua</b></font> <font color="#FF0000">(*)</font><font color="#0032C7"><b><font color="#0032C7"><b>:</b></font></b></font></string>
    <string name="b_n_c_ang_m_c_covid_19_kh_ng"><font color="#0032C7"><b>1.Bạn có đang mắc COVID-19 không</b></font> <font color="#FF0000">(*)</font></string>
    <string name="tiep_xuc"><font color="#0032C7"><b>2. Tiếp xúc gần ca nhiễm, ca nghi nghiễm COVID-19 trong vòng 14 ngày qua</b></font> <font color="#FF0000">(*)</font></string>
    <string name="di_tu_quoc_gia"><font color="#0032C7"><b>3. Đi từ quốc gia hoặc vùng lãnh thổ khác trong vòng 14 ngày qua</b></font> <font color="#FF0000">(*)</font></string>
    <string name="ban_co_ket_thuc"><font color="#0032C7"><b>4. Bạn có kết thúc cách ly tập trung trong vòng 14 ngày qua không?</b></font> <font color="#FF0000">(*)</font></string>
    <string name="trong_vong_14_ngay"><font color="#0032C7"><b>5. Trong vòng 14 ngày qua, trong gia đình/ cơ quan bạn có ai sốt hay ho không?</b></font> <font color="#FF0000">(*)</font></string>
    <string name="ban_da_xuat_hien"><font color="#0032C7"><b>6. Bạn đã xuất viện do điều trị COVID-19 trong vòng 14 ngày qua không?</b></font> <font color="#FF0000">(*)</font></string>
    <string name="vui_long_cung_cap">Vui lòng cung cấp thêm thông tin về triệu chứng hay dấu hiệu khác nếu có</string>
    <string name="vui_l_ng_nh_p_m_x_c_th_c"><font color="#0032C7">Vui lòng nhập mã xác thực</font> <font color="#FF0000">(*)</font><font color="#0032C7"><b>:</b></font></string>
    <string name="benh_nhan_den_quay">Bệnh nhân đến QUẦY CHĂM SÓC KHÁCH HÀNG tại tầng trệt khu A để được hướng dẫn đến phòng khám bệnh.</string>
    <string name="khong_hoan_tra">Phiếu khám không hoàn trả tiền và chỉ có giá trị trong ngày.</string>
    <string name="th_ng_tin_thanh_to_n">THÔNG TIN THANH TOÁN</string>
    <string name="m_n_h_ng">Mã đơn hàng</string>
    <string name="s_ti_n">Số tiền</string>
    <string name="tt211101yqbyn5h4uxzd">TT211101YQBYN5H4UXZD</string>
    <string name="_80_000">80.000 đ</string>
    <string name="g_i_t_m_b_o_hi_m">GỢI Ý TÌM BẢO HIỂM</string>
    <string name="ng">ĐÓNG</string>
    <string name="xinchao">Xin chào!</string>
    <string name="VuiLongNhapMa">Vui lòng nhập mã 6 số \n đã gửi cho bạn qua số điện thoại</string>
    <string name="KhôngNhanDuocMa">Bạn không nhận được mã xác nhận?</string>
    <string name="KhongNhanDuocMa2">Nếu bạn không nhận được mã</string>
    <string name="XacMinhSoDiDong">Xác mình số di động của bạn</string>
    <string name="question1">Đặt lịch khám bệnh theo hẹn, mọi lúc mọi nơi, mà không cần đến bệnh viện\n\n
        \t\t Không xếp hàng chờ đợi để lấy số tiếp nhận khám bệnh\n
        \t\t Giảm thời gian chờ khám tại bệnh viện.\n
        \t\t Thanh toán trực tuyến từ xa, không sử dụng tiền mặt\n
        \t\t Nhận thông tin phiếu khám bệnh điện tử qua phần mềm\n
        \t\t Chủ động chọn lịch khám ( ngày khám, khung giờ khám, bác sỹ khám )\n
        \t\t Nhắc lịch tái khám, đặt lịch tái khám tự động\n
        \t\t Tra cứu kết quả khám chữa bệnh trực tuyến qua phần mềm.\n
        \t\t Thanh toán viện phí, chi phí khám chữa bệnh trực tuyến, mọi lúc mọi nơi\n
        \t\t Dễ dàng tiếp cận và nhận các thông báo mới, thông tin từ bệnh viện</string>
    <string name="DayKhongPhaiSDienThoaiCuaToi">Đây không phải là số điện thoại của tôi</string>
    <string name="thong_bao">Bạn có muốn xóa hồ sơ này không?</string>
    <string-array name="spinner">
        <item>Tất cả</item>
        <item>Đã khám</item>
        <item>Đã thanh toán</item>
        <item>Chưa thanh toán</item>
        <item>Đã hủy</item>
    </string-array>
    <string-array name="chuyen_khoa">
        <item>Khám bệnh ngoài da</item>
        <item>Khám bệnh lây truyền qua đường tình dục - Nam Khoa</item>
        <item>Khám bệnh lây truyền qua đường tình dục - Phụ Khoa</item>
        <item>Khám và tư vấn thẩm mỹ da</item>
        <item>Khám và tư vấn tạo hình thẩm mỹ</item>
    </string-array>
    <string name="ques2">Làm sao để sử dụng được phần mềm đăng ký khám bệnh trực tuyến?</string>
    <string name="question2">\t\tCó thể truy cập và sử dụng phần mềm trên tất cả thiết bị có thể truy cập mạng internet. ( 3G,4G,5G,Wifi, dây mạng…..)\n
\t\tMáy tính bàn, laptop: truy cập website\n
\t\tHầu hết điện thoại thông minh: tải ứng dụng phần mềm tại kho tải Gplay hoặc AppStore\n
\t\tMáy tính bảng và các thiết bị khác ……</string>
    <string name="ques3">Đăng ký khám bệnh online có mất phí không?</string>
    <string name="question3">\t\tCó phí tiện ích, khi sử dụng dịch vụ đăng ký khám bệnh trực tuyến qua phần mềm ( tương tự phí cước viễn thông qua tổng đài )\n
\t\tHiện tại chỉ mất phí khi đăng ký khám bệnh thành công, ngoài ra việc sử dụng ứng dụng và các tính năng khác là hoàn toàn miễn phí.</string>
    <string name="introduction">
        \t\tChào mừng bạn đến với phần mềm Đăng Ký Khám Bệnh Trực Tuyến tại Bệnh viện Da Liễu Thành phố Hồ Chí Minh (gọi chung là "Phần mềm"). Vui lòng đọc kỹ các Điều Khoản Dịch Vụ sau đây trước khi tiếp tục truy cập hoặc sử dụng các dịch vụ của Phần mềm, để bạn biết được các quyền lợi và nghĩa vụ hợp pháp của mình liên quan đến Công ty cổ phần ứng dụng PKH và Bệnh viện Da Liễu Thành phố Hồ Chí Minh và các bên thứ ba có liên kết  (gọi chung là “chúng tôi” hoặc “của chúng tôi”).\n
\t\t“Các Dịch Vụ” chúng tôi cung cấp hoặc phát hành bao gồm:\n
\t\t\tPhần mềm này,\n
\t\t\tcác tính năng hoặc tiện ích được cung cấp trên Phần mềm,\n
\t\t\tmọi thông tin, các Phần mềm được liên kết, các tính năng, dữ liệu, văn bản, hình ảnh, hình chụp, đồ họa, nhạc, âm thanh, video, thông báo, tag, nội dung, lập trình, phần mềm, các dịch vụ ứng dụng (bao gồm nhưng không giới hạn ở bất kỳ dịch vụ ứng dụng di động nào) hoặc các tài liệu khác được cung cấp thông qua Phần mềm hoặc các dịch vụ liên quan của nó (gọi chung là “Nội Dung”). Bất kỳ tính năng mới nào được thêm vào hoặc để tăng cường Các Dịch Vụ đều phải tuân thủ các Điều Khoản Dịch Vụ này.\n
\t\tBằng việc sử dụng các dịch vụ hoặc tiếp tục truy cập trang web, bạn cho biết rằng bạn chấp nhận, không rút lại, các điều khoản dịch vụ này. nếu bạn không đồng ý với các điều khoản này, vui lòng không sử dụng các dịch vụ của chúng tôi hay tiếp tục truy cập phần mềm.\n
\t\tChúng tôi có quyền chỉnh sửa các Điều Khoản Dịch Vụ này vào bất kỳ lúc nào mà không cần thông báo cho người dùng. Việc bạn tiếp tục sử dụng Các Dịch Vụ, Phần mềm, hoặc Tài Khoản Của Bạn sẽ được xem là sự chấp nhận, không rút lại đối với các điều khoản chỉnh sửa đó.\n
\t\tChúng tôi có quyền thay đổi, điều chỉnh, đình chỉ hoặc ngưng bất kỳ phần nào của Phần mềm này hoặc Các Dịch Vụ vào bất kỳ lúc nào. Chúng tôi có thể ra mắt Các Dịch Vụ nhất định hoặc các tính năng của chúng trong một phiên bản beta, phiên bản này có thể không hoạt động chính xác hoặc theo cùng cách như phiên bản cuối cùng, và chúng tôi sẽ không chịu trách nhiệm pháp lý trong các trường hợp đó. Chúng tôi cũng có thể toàn quyền áp dụng giới hạn đối với các tính năng nhất định hoặc hạn chế quyền truy cập của bạn đối với một phần hoặc toàn bộ Phần mềm hoặc Các Dịch Vụ mà không cần thông báo hoặc phải chịu trách nhiệm pháp lý.\n
\t\tChúng tôi có quyền từ chối cho phép bạn truy cập Phần mềm hoặc Các Dịch Vụ vì bất kỳ lý do gì.
    </string>
    <string name="hospital_name">BỆNH VIỆN DA LIỄU THÀNH PHỐ HỒ CHÍ MINH</string>
    <string name="hospital_name_english">HCMC HOSPITAL of DERMATO VENEROLOGY</string>
    <string name="hospital_slogan">DA ĐẸP DA KHỎE - SỐNG KHỎE SỐNG VUI</string>
    <string name="policies"><b>ĐIỀU KHOẢN DỊCH VỤ</b></string>
    <string name="ruler"><b>QUY ĐỊNH SỬ DỤNG</b></string>
    <string name="faq"><b>CÂU HỎI THƯỜNG GẶP</b></string>
    <string name="login"><b>ĐĂNG NHẬP</b></string>
    <string name="security"><b>CHÍNH SÁCH BẢO MẬT</b></string>
    <string name="logout">ĐĂNG XUẤT</string>
</resources>