<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
    <group android:checkableBehavior="single"
        android:id="@+id/groupButton">
    <item android:id="@+id/nav_login"
        android:title="@string/login"
        app:itemBackground="@drawable/loginicon"
        app:itemTextColor="#FFA000"
        android:icon="@drawable/loginicon"
        app:showAsAction="ifRoom"/>
    </group> 
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/nav_paper"
            android:title="@string/ho_so"
            android:icon="@drawable/hoso"/>
        <item android:id="@+id/nav_phieuKham"
            android:title="@string/phieu_kham"
            android:icon="@drawable/ic_baseline_addchart_24"/>
        <item android:id="@+id/nav_noti"
            android:title="@string/notification"
            android:icon="@drawable/notif"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item android:id="@+id/nav_policy"
            android:title="@string/policies"
            android:icon="@drawable/dieukhoan"/>
        <item android:id="@+id/nav_baomat"
            android:title="@string/security"
            android:icon="@drawable/securityicon"/>
        <item android:id="@+id/nav_regu"
            android:title="@string/ruler"
            android:icon="@drawable/quydinh"/>
        <item android:id="@+id/nav_faq"
            android:icon="@drawable/faq"
            android:title="@string/faq"/>
        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/login"
            android:visible="false"/>
    </group>

<!--    <item android:id="@+id/nav_others"-->
<!--        android:title="">-->
<!--        <menu>-->
<!--            <item android:id="@+id/nav_policy"-->
<!--                android:title="Điều khoản"-->
<!--                android:icon="@drawable/iconphieukham"/>-->
<!--            <item android:id="@+id/nav_regu"-->
<!--                android:title="Quy định"-->
<!--                android:icon="@drawable/khaibao"/>-->
<!--            <item android:id="@+id/nav_faq"-->
<!--                android:icon="@drawable/iconphieukham"-->
<!--                android:title="Câu hỏi thường gặp"/>-->
<!--        </menu>-->

<!--    </item>-->
</menu>