<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen_faq"
    android:orientation="vertical"
    android:id="@+id/linearQuestion">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/main_color">
            <Button
                android:id="@+id/btnBackDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                android:background="@color/main_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Câu hỏi thường gặp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/btnBackHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_baseline_home_24"
                android:background="@color/main_color"
                android:paddingRight="10dp" />

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>
    <Button
        android:id="@+id/btnQues1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lợi ích khi sử dụng phần mềm đăng ký khám bệnh trực tuyến này là gì?"
        android:textAlignment="textStart"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"/>
    <TextView
        android:id="@+id/txtQues1"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btnQues2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques2"
        android:textAlignment="textStart"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"/>
    <TextView
        android:id="@+id/txtQues2"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btnQues3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques3"
        android:textAlignment="textStart"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"/>
    <TextView
        android:id="@+id/txtQues3"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        android:visibility="gone"/>
</LinearLayout>