<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.appbenhvienlocal.NhapTheATM">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#5CC0AB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#5CC0AB">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#5CC0AB"
                android:src="@drawable/ic_baseline_keyboard_backspace_24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Thanh toán"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_linear"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_n_h_ng"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtMaDonHang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tt211101yqbyn5h4uxzd"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_ti_n"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtGiaTien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_80_000"
                android:textColor="#C60C0C"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1A4CFF"
        android:gravity="center"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th_ng_tin_thanh_to_n"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imvLogoBank"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="80dp"
            android:src="@drawable/logo_bidv" />


    </LinearLayout>

    <EditText
        android:id="@+id/edtSoThe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext2"
        android:hint="Số thẻ"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edtTenThe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext2"
        android:hint="Số in trên thẻ"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edtSodt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext2"
        android:hint="Số điện thoại"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edittext2"
        android:hint="Email (Không bắt buộc)"
        android:padding="10dp" />


</LinearLayout>