<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/drawerLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00a8c7">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#00a8c7"/>

        </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imvBacSi"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/h_nh_nh"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearFunction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/imvBacSi">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="100dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hồ sơ"
                            android:textSize="22dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:layout_width="70dp"
                            android:layout_height="100dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Phiếu khám"
                            android:textSize="22dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageButton
                            android:layout_width="70dp"
                            android:layout_height="100dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Kiểm tra BHYT"
                            android:textSize="22dp" />
                    </LinearLayout>

                </LinearLayout>


                <ImageButton
                    android:id="@+id/btnKhaiBao"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/khai_bao"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearFunction" />

                <Button
                    android:id="@+id/btnDatKham"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#00a8c7"
                    android:text="@string/dat_kham"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    app:layout_constraintTop_toBottomOf="@id/btnKhaiBao" />


                <TableLayout
                    android:id="@+id/tblFunction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnDatKham"
                    app:layout_constraintVertical_bias="0"
                    android:layout_margin="30dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#BDB8B8">

                        <LinearLayout
                            android:background="#FFFFFF"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginRight="1dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Hỗ trợ đặt khám"
                                android:textSize="12sp"
                                android:textColor="#BDB8B8"
                                android:layout_gravity="center"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/phone_number"
                                android:padding="0dp"
                                android:background="@android:color/transparent"
                                android:textColor="#00a8c7"
                                android:textSize="18sp"
                                android:layout_gravity="center" />
                        </LinearLayout>
                        <LinearLayout
                            android:background="#FFFFFF"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginRight="1dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Hỗ trợ Zalo"
                                android:textColor="#BDB8B8"
                                android:textSize="12sp"
                                android:layout_gravity="center"/>

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/zalo"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                        <LinearLayout
                            android:background="#FFFFFF"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Bản đồ"
                                android:textColor="#BDB8B8"
                                android:textSize="12sp"
                                android:layout_gravity="center"/>
                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/location"
                                android:layout_gravity="center" />
                        </LinearLayout>

                    </TableRow>

                </TableLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.constraintlayout.widget.ConstraintLayout>